[tool.black]
line-length = 79

[tool.poetry]
name = "proxychecker"
version = "0.1.0"
description = ""
authors = ["vh <h5v@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiohttp-socks = "^0.7.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
